[workspace]
resolver = "3"
members = [
	"scripts/cargo-bin",
	"src/cas",
	"src/conductor",
	"src/conductor/examples/support/concat-tool",
	"src/conductor-builtins/archive",
	"src/conductor-builtins/echo",
	"src/conductor-builtins/export",
	"src/conductor-builtins/fs",
	"src/conductor-builtins/import",
	"src/mediapm",
]

[workspace.package]
# name = "mediapm"
version = "0.0.0"
edition = "2024"
rust-version = "1.94.0"
description = "Declarative media package manager"
license-file = "LICENSE.txt"
publish = false
# build = "scripts/build.rs"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bitvec = "1.0.1"
blake3 = "1.8.5"
bytemuck = { version = "1.24.0", features = ["derive"] }
bytes = "1.10.1"
chromaprint-next = "0.1.0"
clap = { version = "4.6.1", default-features = false, features = [
	"derive",
	"std",
] }
crc32fast = "1.5.0"
dashmap = "6.1.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
ffmetadata = "0.1.2"
flate2 = "1.1.4"
fp-library = "0.17.0"
fs4 = "1.1.0"
futures-util = "0.3.31"
memmap2 = "0.9.9"
miette = { version = "7.6.0", features = ["derive"] }
multihash = "0.19"
multihash-derive = "0.9"
musicbrainz_rs = { version = "0.13.0", default-features = false }
nickel-lang-core = "0.17.0"
oxidelta = { version = "0.1.4", default-features = false }
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["alloc"] }
proptest = "1.6.0"
pulsebar = { version = "0.2.1", features = ["tokio"] }
ractor = { version = "0.15.12", features = ["tokio_runtime"] }
rand = { version = "0.9", features = ["std_rng"] }
redb = "4.1.0"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"blocking",
] }
same-file = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = { version = "1.15.1", features = ["serde"] }
tar = "0.4.44"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52.2", features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt-multi-thread",
	"sync",
	"time",
] }
tracing = "0.1.41"
unicode-normalization = "0.1.24"
url = "2.5.7"
xz2 = "0.1.7"
zerocopy = { version = "0.8", features = ["derive"] }
zip = { version = "8.6.0", default-features = false, features = [
	"deflate-flate2-zlib-rs",
] }

[workspace.metadata.bin]
cargo-binstall = { version = "1.19.1" }
rumdl = { version = "0.2.0" }
