[workspace]
resolver = "3"
members = [
	"scripts/cargo-bin",
	"src/mediapm",
	"src/mediapm-cas",
	"src/mediapm-conductor",
	"src/mediapm-conductor/examples/support/concat-tool",
	"src/mediapm-conductor-builtins/archive",
	"src/mediapm-conductor-builtins/echo",
	"src/mediapm-conductor-builtins/export",
	"src/mediapm-conductor-builtins/fs",
	"src/mediapm-conductor-builtins/import",
	"src/mediapm-utils",
]

[workspace.package]
# name = "mediapm"
version = "0.0.0"
edition = "2024"
rust-version = "1.94.0"
description = "Declarative media package manager"
license-file = "LICENSE.txt"
publish = false
# build = "scripts/build.rs"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
blake3 = "1.8.5"
bytes = "1.10.1"
chromaprint-next = "0.1.0"
clap = { version = "4.6.1", default-features = false, features = [
	"derive",
	"env",
	"std",
] }
clap_complete = { version = "4", default-features = false }
console = "0.15"
dashmap = "6.1.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
ffmetadata = "0.1.2"
flate2 = "1.1.4"
futures-util = "0.3.31"
indicatif = { version = "0.17", features = ["tokio"] }
libc = "0.2"
multihash = "0.19"
musicbrainz_rs = { version = "0.13.0", default-features = false }
nickel-lang-core = "0.18.0"
oxidelta = { version = "0.1.4", default-features = false }
ractor = { version = "0.15.12", features = ["tokio_runtime"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"blocking",
] }
same-file = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52.2", features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt-multi-thread",
	"sync",
	"time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-normalization = "0.1.24"
mediapm-utils = { path = "src/mediapm-utils", default-features = false }
url = "2.5.7"
xz2 = "0.1.7"
zerocopy = { version = "0.8", features = ["derive"] }
zip = { version = "8.6.0", default-features = false, features = [
	"deflate-flate2-zlib-rs",
] }
proptest = "1"

[workspace.metadata.bin]
cargo-binstall = { version = "1.19.1" }
rumdl = { version = "0.2.0" }
