[package]
name = "mediapm-conductor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Orchestration contracts and state model for mediapm"

[features]
default = ["cli"]
cli = [
  "dep:clap",
  "dep:clap_complete",
  "mediapm-cas/cli",
  "tool-presets",
  "fetch",
]
fetch = ["mediapm-conductor-builtin-import/fetch"]
tool-presets = ["dep:flate2", "dep:tar", "dep:reqwest", "dep:zip"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive", "std"], optional = true }
clap_complete = { workspace = true, optional = true }
dirs.workspace = true
dotenvy.workspace = true
flate2 = { workspace = true, optional = true }
fp-library.workspace = true
futures-util.workspace = true
mediapm-cas = { path = "../cas", default-features = false }
mediapm-conductor-builtin-echo = { path = "../conductor-builtins/echo", default-features = false }
mediapm-conductor-builtin-fs = { path = "../conductor-builtins/fs", default-features = false }
mediapm-conductor-builtin-import = { path = "../conductor-builtins/import", default-features = false }
mediapm-conductor-builtin-archive = { path = "../conductor-builtins/archive", default-features = false }
mediapm-conductor-builtin-export = { path = "../conductor-builtins/export", default-features = false }
nickel-lang-core.workspace = true
pulsebar.workspace = true
terminal_size = "0.1"
ractor.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tar = { workspace = true, optional = true }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { workspace = true, optional = true }
zip = { workspace = true, optional = true }

[[bin]]
name = "mediapm-conductor"
path = "src/main.rs"
required-features = ["cli"]
