[package]
name = "mediapm-cas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "CAS foundation for mediapm"

[features]
default = ["cli"]
cli = ["dep:anyhow", "dep:clap", "dep:clap_complete"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }
dashmap.workspace = true
multihash.workspace = true
oxidelta = { workspace = true, default-features = false }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
zerocopy = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[[bin]]
name = "mediapm-cas"
path = "src/main.rs"
required-features = ["cli"]
