[package]
name = "mediapm-conductor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Orchestration contracts and state model for mediapm"

[features]
default = ["cli"]
cli = [
  "dep:clap",
  "dep:clap_complete",
  "mediapm-cas/cli",
  "mediapm-utils/progress",
  "tool-presets",
  "fetch",
]
fetch = ["mediapm-conductor-builtin-import/fetch"]
tool-presets = ["dep:flate2", "dep:tar", "dep:reqwest", "dep:zip", "dep:xz2", "mediapm-utils/progress"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive", "std"], optional = true }
clap_complete = { workspace = true, optional = true }
dashmap.workspace = true
dirs.workspace = true
dotenvy.workspace = true
flate2 = { workspace = true, optional = true }
futures-util.workspace = true
mediapm-cas = { path = "../mediapm-cas", default-features = false }
mediapm-utils = { path = "../mediapm-utils", default-features = false, features = ["nickel"] }
mediapm-conductor-builtin-echo = { path = "../mediapm-conductor-builtins/echo", default-features = false }
mediapm-conductor-builtin-fs = { path = "../mediapm-conductor-builtins/fs", default-features = false }
mediapm-conductor-builtin-import = { path = "../mediapm-conductor-builtins/import", default-features = false }
mediapm-conductor-builtin-archive = { path = "../mediapm-conductor-builtins/archive", default-features = false }
mediapm-conductor-builtin-export = { path = "../mediapm-conductor-builtins/export", default-features = false }
nickel-lang-core.workspace = true
ractor.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tar = { workspace = true, optional = true }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { workspace = true, optional = true, features = ["json", "stream"] }
xz2 = { workspace = true, optional = true }
zip = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true

[[bin]]
name = "mediapm-conductor"
path = "src/main.rs"
required-features = ["cli"]
