[package]
name = "mediapm-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Shared utility types, path helpers, and builtin boilerplate for mediapm crates"

[features]
default = []
cli = ["dep:clap"]
nickel = ["dep:serde", "dep:serde_json"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
