[package]
name = "mediapm-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Shared utility types, path helpers, and builtin boilerplate for mediapm crates"

[features]
default = []
cli = ["dep:clap"]
nickel = ["dep:serde", "dep:serde_json"]
progress = ["dep:indicatif", "dep:console"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std"], optional = true }
console = { workspace = true, optional = true }
indicatif = { workspace = true, features = ["tokio"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
