[package]
name = "mediapm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Media orchestration facade over conductor and CAS"

[features]
default = ["cli"]
cli = [
  "dep:anyhow",
  "dep:clap",
  "dep:clap_complete",
  "mediapm-cas/cli",
  "mediapm-conductor/cli",
]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
chromaprint-next.workspace = true
clap = { workspace = true, features = ["derive", "std"], optional = true }
clap_complete = { workspace = true, optional = true }
dotenvy.workspace = true
ffmetadata.workspace = true
flate2.workspace = true
fp-library.workspace = true
libc.workspace = true
mediapm-cas = { path = "../cas", default-features = false }
mediapm-conductor = { path = "../conductor", default-features = false }
musicbrainz_rs = { workspace = true, features = ["async", "rustls"] }
nickel-lang-core.workspace = true
pulsebar.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
unicode-normalization.workspace = true
xz2.workspace = true
zip.workspace = true

[dev-dependencies]
same-file.workspace = true

[[bin]]
name = "mediapm"
path = "src/main.rs"
required-features = ["cli"]
