[package]
name = "mediapm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Media orchestration facade over conductor and CAS"

[features]
default = ["cli", "media-tagger"]
cli = [
  "dep:clap",
  "dep:clap_complete",
  "mediapm-cas/cli",
  "mediapm-conductor/cli",
]
media-tagger = ["dep:chromaprint-next", "dep:musicbrainz_rs", "dep:ffmetadata"]

[lints]
workspace = true

[lib]
name = "mediapm"
path = "src/lib.rs"

[[bin]]
name = "mediapm"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
chromaprint-next = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "std"], optional = true }
clap_complete = { workspace = true, optional = true }
dotenvy.workspace = true
ffmetadata = { workspace = true, optional = true }
flate2.workspace = true
libc.workspace = true
mediapm-cas = { path = "../mediapm-cas", default-features = false }
mediapm-conductor = { path = "../mediapm-conductor", default-features = false }
musicbrainz_rs = { workspace = true, features = [
  "async",
  "rustls",
], optional = true }
nickel-lang-core.workspace = true
pulsebar.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
unicode-normalization.workspace = true
xz2.workspace = true
zip.workspace = true

[dev-dependencies]
same-file.workspace = true
