[package]
name = "mediapm-conductor-builtin-archive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Phase 2 built-in archive tool contract (zip/tar.gz)"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-archive"
path = "src/main.rs"
