[package]
name = "mediapm-conductor-builtin-archive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Phase 2 built-in archive tool contract (zip/tar.gz)"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tempfile.workspace = true
walkdir.workspace = true
zip.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-archive"
path = "src/main.rs"
required-features = ["cli"]
