[package]
name = "mediapm-conductor-builtin-archive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Built-in archive tool contract (zip/tar.gz)"

[features]
default = ["cli"]
cli = ["dep:clap"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std"], optional = true }
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-archive"
path = "src/main.rs"
required-features = ["cli"]
