[package]
name = "mediapm-conductor-builtin-echo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-echo"
path = "src/main.rs"
