[package]
name = "mediapm-conductor-builtin-export"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Phase 2 built-in export tool contract"

[dependencies]
clap = { workspace = true, features = ["derive"] }
mediapm-conductor-builtin-archive = { path = "../archive" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-export"
path = "src/main.rs"
