[package]
name = "mediapm-conductor-builtin-export"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Phase 2 built-in export tool contract"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"], optional = true }
mediapm-conductor-builtin-archive = { path = "../archive", default-features = false }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-export"
path = "src/main.rs"
required-features = ["cli"]
