[package]
name = "mediapm-conductor-builtin-fs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Built-in fs tool contract"

[features]
default = ["cli"]
cli = ["dep:clap"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std"], optional = true }
mediapm-utils = { workspace = true, features = ["cli"] }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-fs"
path = "src/main.rs"
required-features = ["cli"]
