[package]
name = "mediapm-conductor-builtin-import"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Phase 2 built-in import tool contract"

[lints]
workspace = true

[dependencies]
blake3.workspace = true
clap = { workspace = true, features = ["derive"] }
mediapm-conductor-builtin-archive = { path = "../archive" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]

[[bin]]
name = "mediapm-conductor-builtin-import"
path = "src/main.rs"
