[package]
name = "mediapm-conductor-builtin-import"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Phase 2 built-in import tool contract"

[features]
default = ["cli"]
cli = ["dep:clap"]

[lints]
workspace = true

[dependencies]
blake3.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
mediapm-conductor-builtin-archive = { path = "../archive", default-features = false }
ureq.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-import"
path = "src/main.rs"
required-features = ["cli"]
