[package]
name = "mediapm-conductor-builtin-import"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Built-in import tool contract"

[features]
default = ["cli", "fetch"]
cli = ["dep:clap"]
fetch = ["dep:reqwest", "dep:url", "dep:blake3"]

[lints]
workspace = true

[dependencies]
blake3 = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "std"], optional = true }
mediapm-conductor-builtin-archive = { path = "../archive", default-features = false }
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-import"
path = "src/main.rs"
required-features = ["cli"]
