[package]
name = "mediapm-conductor-builtin-echo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json", "mediapm-utils/cli"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std"], optional = true }
mediapm-utils = { workspace = true }
serde_json = { workspace = true, optional = true }

[[bin]]
name = "mediapm-conductor-builtin-echo"
path = "src/main.rs"
required-features = ["cli"]
