[package]
name = "mediapm-conductor-builtin-export"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Built-in export tool contract"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json", "mediapm-utils/cli"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std"], optional = true }
mediapm-conductor-builtin-archive = { path = "../archive", default-features = false }
mediapm-utils = { workspace = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-export"
path = "src/main.rs"
required-features = ["cli"]
