[package]
name = "mediapm-conductor-builtin-fs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Built-in fs tool contract"

[features]
default = ["cli"]
cli = ["dep:clap", "mediapm-utils/cli"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std"], optional = true }
mediapm-utils = { workspace = true }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "mediapm-conductor-builtin-fs"
path = "src/main.rs"
required-features = ["cli"]
